<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.wilux.spigot-seasons</groupId>
    <artifactId>SpigotSeasons</artifactId>
    <name>SpigotSeasons</name>
    <version>1.0-SNAPSHOT</version>

    <packaging>jar</packaging>

    <properties>
        <project.fullVersion>${project.version}</project.fullVersion>
        <javac.target>1.8</javac.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <sourceDirectory>src/main/java</sourceDirectory>
        <!--testSourceDirectory>src/test/java</testSourceDirectory!-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <createDependencyReducedPom>false</createDependencyReducedPom>

                            <artifactSet>
                                <excludes>
                                    <exclude>org.spigotmc:spigot</exclude>
                                    <exclude>org.spigotmc:spigot-api</exclude>
                                    <exclude>com.comphenix.net:*</exclude>
                                    <exclude>net.minecraft.server.v1_16_R3:*</exclude>
                                    <exclude>junit:junit</exclude>
                                    <exclude>io.netty:*</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Main-Class>me.wilux.spigot_seasons.SpigotSeasons</Main-Class>
                            <Implementation-Title>SpigotSeasons</Implementation-Title>
                            <Implementation-Version>${project.fullVersion}</Implementation-Version>
                            <Implementation-Vendor>wilux</Implementation-Vendor>
                        </manifestEntries>
                    </archive>
                    <finalName>${project.name}</finalName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.6.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.lucko</groupId>
            <artifactId>commodore</artifactId>
            <version>1.9</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.minecraft.server.v1_16_R3</groupId>
            <artifactId>minecraft</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>D:/dev/spigot/_buildtools/spigot-1.16.5.jar</systemPath>
        </dependency>
    </dependencies>
</project>